sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() 
{
	var i=0
	for(i<- 0 to getNombreValeurs()-1) 
	{
		for(k<- 0 to getNombreValeurs()-2-i)
		{
			if(getValeur(k)>getValeur(k+1))
			{
				echange(k,k+1)
				modifie=true
			}
		}
	}
}
